remove dmenu-run dependency and update wmenu font size to make the height match the status bar height

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -33,7 +33,7 @@ set $term foot
 # on the original that the command was run on.
 
 # manually set colors because wmenu doesn't support hex
-set $menu dmenu_path | wmenu -N 282828 -n ebdbb2 -S 458588 -f "source code pro 12" | xargs swaymsg exec --
+set $menu wmenu-run -N 282828 -n ebdbb2 -S 458588 -f "source code pro 13"
 
 # lockscreen
 set $lock swaylock
