--- a/.config/sway/config
+++ b/.config/sway/config
@@ -257,6 +257,7 @@ mode "new mark" {
     bindsym 0 mark 0; mode "default"
     bindsym Return mode "default"
     bindsym Escape mode "default"
+    bindsym $mod+Shift+m mode "default"
 }
 
 mode "jump to mark" {
@@ -272,6 +273,7 @@ mode "jump to mark" {
     bindsym 0 [con_mark="0"] focus; mode "default"
     bindsym Return mode "default"
     bindsym Escape mode "default"
+    bindsym $mod+m mode "default"
 }
 
 bindsym $mod+Shift+m mode "new mark"
@@ -280,22 +282,18 @@ bindsym $mod+m mode "jump to mark"
 # Restart
 bindsym $mod+Shift+r exec swaynag -t warning -m 'You pressed the restart shortcut. Do you really want to restart? This will shut down your computer.' -B 'Yes, restart' 'reboot'
 
-# Screen lock
-# bindsym $mod+Shift+l exec $lock
-
 # # Volume controls:
 
-# Allow volume controls even if the screen is locked
 bindsym --locked {
     XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
     XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
     XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
     XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
-}
 
-# Brightness controls
-bindsym XF86MonBrightnessUp exec light -A 10
-bindsym XF86MonBrightnessDown exec light -U 10
+    # Brightness controls
+    XF86MonBrightnessUp exec light -A 10
+    XF86MonBrightnessDown exec light -U 10
+}
 # Layout stuff:
 
 # You can "split" the current object of your focus with
@@ -333,10 +331,6 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 bindsym $mod+shift+p exec grim -g "$(slurp -d)" ~/Pictures/screenshots/$(date +"%Y-%m-%d-%H:%M:%s.png")
-
-set $screenrecord wf-recorder -g "$(slurp)" -f ~/Videos/screenshots/mov-$(date +"%Y-%m-%d-%H:%M:%s.mp4")
-bindsym Ctrl+Shift+F6 exec $screenrecord
-bindsym Ctrl+Shift+Backspace exec killall -s SIGINT wf-recorder
 
 ##############
 # Status bar #
