sway: Use $mod+d instead of $mod+o to launch $menu

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -210,7 +210,7 @@ bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
 
 # Start launcher
-bindsym $mod+o exec $menu
+bindsym $mod+d exec $menu
 
 bindsym $mod+Shift+e exec swaylock & systemctl suspend
 
