switch to debian
requires font update because I can't figure out how to
install source-code-pro yet

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,4 +1,4 @@
-font=source code pro:size=11
+font=monospace:size=11
 pad=2x1 # shifts text to the left for increased legibility
 app-id=foot # sets app-id for identification by window-manager
 bold-text-in-bright=no
