--- a/.config/sway/config
+++ b/.config/sway/config
@@ -272,10 +272,10 @@ mode "jump to mark" {
 bindsym $mod+m mode "jump to mark"
 
 bindsym --locked {
-    XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-    XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-    XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-    XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+    XF86AudioMute exec wpctl set-mute @DEFAULT_SINK@ toggle
+    XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_SINK@ 5%+
+    XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_SINK@ 5%-
+    XF86AudioMicMute exec wpctl set-source-mute @DEFAULT_SOURCE@ toggle
 
     # Brightness controls
     XF86MonBrightnessUp exec light -A 10
