--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -16,6 +16,7 @@ general {
 
 order += "wireless _first_"
 order += "ethernet _first_"
+order += "volume master"
 order += "battery all"
 # order += "load"
 # order += "memory"
@@ -40,6 +41,14 @@ battery all {
     status_full = "FULL"
     path = "/sys/class/power_supply/BAT%d/uevent"
     low_threshold = 10
+}
+
+volume master {
+    format = "♪: %volume"
+    format_muted = "♪: muted (%volume)"
+    device = "default"
+    mixer = "Master"
+    mixer_idx = 0
 }
 
 # load {
