--- a/.config/sway/config
+++ b/.config/sway/config
@@ -59,7 +59,7 @@ input type:keyboard {
     xkb_variant dvorak
     repeat_rate 040
     repeat_delay 200
-    xkb_options altwin:swap_alt_win,caps:swapescape,compose:rwin
+    xkb_options altwin:swap_alt_win,caps:swapescape,compose:ralt
 }
 
 # don't swap esc and caps for kinesis keyboard
@@ -92,8 +92,8 @@ floating_modifier $mod normal
 
 # Screen Lock
 # enable or disable screen on lid-close/open
-bindswitch --reload --locked lid:on output LVDS-1 disable
-bindswitch --reload --locked lid:off output LVDS-1 enable
+bindswitch --reload --locked lid:on output eDP-1 disable
+bindswitch --reload --locked lid:off output eDP-1 enable
 
 # Note: workspaces can have any name you want, not just numbers.
 # We just use 1-10 as the default.
@@ -258,9 +258,9 @@ mode "jump to mark" {
 bindsym $mod+m mode "jump to mark"
 
 bindsym --locked {
-    XF86AudioMute exec wpctl set-mute @DEFAULT_SINK@ toggle
-    XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_SINK@ 5%+
-    XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_SINK@ 5%-
+    XF86AudioMute exec wpctl set-mute @DEFAULT_SINK@ toggle  && pkill -USR1 i3status
+    XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_SINK@ 5%+ && pkill -USR1 i3status
+    XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_SINK@ 5%- && pkill -USR1 i3status
     XF86AudioMicMute exec wpctl set-source-mute @DEFAULT_SOURCE@ toggle
 
     # Brightness controls
