--- a/.config/sway/config
+++ b/.config/sway/config
@@ -258,9 +258,9 @@ mode "jump to mark" {
 bindsym $mod+m mode "jump to mark"
 
 bindsym --locked {
-    XF86AudioMute exec wpctl set-mute @DEFAULT_SINK@ toggle  && pkill -USR1 i3status
-    XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_SINK@ 5%+ && pkill -USR1 i3status
-    XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_SINK@ 5%- && pkill -USR1 i3status
+    XF86AudioMute exec wpctl set-mute @DEFAULT_SINK@ toggle 
+    XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_SINK@ 5%+ 
+    XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_SINK@ 5%-
     XF86AudioMicMute exec wpctl set-source-mute @DEFAULT_SOURCE@ toggle
 
     # Brightness controls
